[tool.poetry]
name = "cnab"
version = "0.1.1"
description = "A module for working with Cloud Native Application Bundles in Python"
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/garethr/pycnab"
keywords = ["cnab"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
pytest-black = "^0.3.2"
pytest-mypy = "^0.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
