[tool.poetry]
name = "cnab"
version = "0.1.5"
description = "A module for working with Cloud Native Application Bundles in Python"
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/garethr/pycnab"
keywords = ["cnab"]

[tool.poetry.dependencies]
python = "^3.7"
docker = { version = "^3.6", optional = true }
canonicaljson = "^1.1"

[tool.poetry.extras]
docker = ["docker"]

[tool.poetry.dev-dependencies]
pytest = "^3.4"
pytest-black = "^0.3.2"
pytest-mypy = "^0.3.2"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
